--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="text" id="usernameInput" placeholder="Type your Username">
     <button onclick="checkUsername()">Check</button>
     <div id="result"></div>
-    <div Made: <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: white; text-decoration: none;">FOYEAJ</a></h4>"></div>
+    <h4> <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: white; text-decoration: none;"> Made: FOYEAJ</a></h4>
   </div>
 
   <footer>
