--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="text" id="usernameInput" placeholder="Type your Username">
     <button onclick="checkUsername()">Check</button>
     <div id="result"></div>
-    <h4> <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: white; text-decoration: none;"> Made: FOYEAJ</a></h4>
+    <h4> <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: black; text-decoration: none;"> Made: FOYEAJ</a></h4>
   </div>
 
   <footer>
