--- a/index.html
+++ b/index.html
@@ -14,14 +14,23 @@
     <h2>OVERTAKE Active Yappers</h2>
     <input type="text" id="usernameInput" placeholder="Type your Username">
     <button onclick="checkUsername()">Check</button>
+    
     <div id="result"></div>
-    <h4> <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: black; text-decoration: none;"> Made: FOYEAJ</a></h4>
+    <div id="counter">Total Checks: 0</div>
+
+    <!-- আপনার নাম/লিঙ্ক -->
+    <h4>
+      <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: white; text-decoration: none;">
+        Made: FOYEAJ
+      </a>
+    </h4>
   </div>
 
   <footer>
-    <p>Disclaimer:This site is just a fun project. Not an official Overtake tool.</p>
+    <p>Disclaimer: This is just a fun project, not an official OVERTAKE tool.</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
