--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- আপনার নাম/লিঙ্ক -->
     <h4>
-      <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: white; text-decoration: none;">
+      <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: 0B26E5; text-decoration: none;">
         Made: FOYEAJ
       </a>
     </h4>
