--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
     <!-- আপনার নাম/লিঙ্ক -->
     <h4>
-      <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: 0B26E5; text-decoration: none;">
-        Made: FOYEAJ
-      </a>
-    </h4>
+  <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: #0CE1F0; text-decoration: none;">
+    Made: FOYEAJ
+  </a>
+</h4>
+
   </div>
 
   <footer>
