--- a/index.html
+++ b/index.html
@@ -20,11 +20,20 @@
 
     <!-- আপনার নাম/লিঙ্ক -->
     <h4>
-  <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: #0CE1F0; text-decoration: none;">
-    Made: FOYEAJ
-  </a>
-</h4>
+      <a href="https://twitter.com/foyeajuddinovi" target="_blank" style="color: #0CE1F0; text-decoration: none;">
+        Made: FOYEAJ
+      </a>
+    </h4>
+  </div>
 
+  <!-- $TAKE Calculator -->
+  <div class="calculator-box">
+    <h3>$TAKE Calculator</h3>
+    <input type="number" id="takeAmount" placeholder="Enter $TAKE amount">
+    <button onclick="calculateValue()">Calculate</button>
+    <div id="calcResult">Your value will appear here.</div>
+
+    <div id="livePrice">Loading Live Price...</div>
   </div>
 
   <footer>
@@ -34,4 +43,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
