--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     </h4>
   </div>
 
+<div class="countdown-box">
+  <h3>⏳ S2 left only</h3>
+  <div id="countdown">Loading...</div>
+</div>
+  
   <!-- $TAKE Calculator -->
   <div class="calculator-box">
     <h3>$TAKE Calculator</h3>
