--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
     <div id="calcResult">Your value will appear here.</div>
 
     <div id="livePrice">Loading Live Price...</div>
+
+    <!-- Info Cards -->
+<div id="take-info" class="info-cards">
+  <div class="card">
+    <h3>Price</h3>
+    <p id="take-price">$--</p>
+  </div>
+  <div class="card">
+    <h3>24h Volume</h3>
+    <p id="take-volume">$--</p>
+  </div>
+  <div class="card">
+    <h3>FDV</h3>
+    <p id="take-fdv">$--</p>
+  </div>
+  <div class="card">
+    <h3>Market Cap</h3>
+    <p id="take-mcap">$--</p>
+  </div>
+</div>
+
   </div>
 
   <footer>
