--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Checker Box -->
     <div class="section-box">
       <!-- Overtake Logo -->
-      <img src="overtake-logo.png" alt="Overtake Logo" class="main-logo">
+      <img src="logo.png" alt="Overtake Logo" class="main-logo">
 
       <h2>OVERTAKE Active Yappers</h2>
       <input type="text" id="usernameInput" placeholder="Type your Username">
