--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <!-- Overtake Logo -->
       <img src="logo.png" alt="Overtake Logo" class="main-logo">
 
-      <h2>OVERTAKE Active Yappers</h2>
+      <h2>OVERTAKE Active Yappers (Unofficial)</h2>
       <input type="text" id="usernameInput" placeholder="Type your Username">
       <button onclick="checkUsername()">Check</button>
       <div id="result"></div>
-      <div id="counter">Total Checks: 0</div>
+      <div id="counter">Total You Checked: 0</div>
     </div>
 
     <!-- Calculator Box -->
     <div class="section-box">
-      <h2>$TAKE Calculator(live time price)</h2>
+      <h2>$TAKE Calculator (Live time price)</h2>
       <input type="number" id="takeAmount" placeholder="Enter $TAKE amount">
       <button onclick="calculateValue()">Calculate</button>
       <p id="calcResult">Your value will appear here.</p>
@@ -51,7 +51,10 @@
     </div>
 
   </div>
-
+<div class="section-box">
+  <h2>👥 Visitor Counter</h2>
+  <p id="visitor-count">Visitors: Loading...</p>
+</div>
   <footer>
     <p>Disclaimer: This is just a fun project, not an official OVERTAKE tool.</p>
   </footer>
