--- a/index.html
+++ b/index.html
@@ -51,12 +51,9 @@
     </div>
 
   </div>
-<div class="section-box">
-  <h2>👥 Visitor Counter</h2>
-  <p id="visitor-count">Visitors: Loading...</p>
-</div>
+
   <footer>
-    <p>Disclaimer: This is just a fun project, not an official OVERTAKE tool.</p>
+    <p>Disclaimer: This is just hand made website, not an official OVERTAKE tool.</p>
   </footer>
 
   <script src="script.js"></script>
