--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
       <div class="row"><span>Price:</span> <p id="take-price">$--</p></div>
       <div class="row"><span>24h Volume:</span> <p id="take-volume">$--</p></div>
       <div class="row"><span>FDV:</span> <p id="take-fdv">$--</p></div>
-      <div class="row"><span>Market Cap:</span> <p id="take-mcap">$--</p></div>
+      <div class="row"><span>Market Cap:</span> <p id="take-mcap">$--</p></div> 
+      <!-- TradingView-style Candle -->
+<div class="section-box">
+  <h2>$TAKE Live Candle</h2>
+  <div id="take-candle" class="chart"></div>
+  <small class="chart-note">Data: CoinGecko • auto refresh 60s</small>
+</div>
+
+<!-- Lightweight Charts (by TradingView) -->
+<script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
     </div>
 
     <!-- Countdown -->
